@@ -13,10 +13,12 @@
  * |____________________________________________
  * |           |          |
  * | alpha     | lower    | _filter_alpha()   
- * |           | upper    |                   
+ * |           | upper    |
+ * |           | space    |        
  * |-------------------------------------------
  * | alpha_num | lower    | _filter_alpha_num()
  * |           | upper    |
+ * |           | space    |  
  * |-------------------------------------------
  * | email     |          | _filter_email()
  * |-------------------------------------------
